--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>Wu Viz</title>
+    <script>
+      // GitHub Pages routing hack
+      (function() {
+        const redirectPath = sessionStorage.getItem('redirectPath');
+        if (redirectPath) {
+          sessionStorage.removeItem('redirectPath');
+          history.replaceState(null, null, '/Wu-Viz' + redirectPath);
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
